--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </main>
     <footer>
         <p>
-            Site criado por <a href="#">Gustavo Guanabara</a> para o <a href="#">CursoemVideo</a>.
+            Site criado por <a href="#">Dev. Vitor S</a> para o <a href="#">CursoemVideo</a>.
         </p>
     </footer>
 </body>
